2017-01-10  Bruno Haible  <bruno@clisp.org>

	Modernize URLs.
	* README: Prefer https over http or ftp URLs.
	* DEPENDENCIES: Likewise.

2016-12-26  Bruno Haible  <bruno@clisp.org>

	Clarify which version of texinfo.tex is used.
	* autogen.sh (TEXINFO_VERSION): New variable.

2016-12-10  Bruno Haible  <bruno@clisp.org>

	Make the generated <unistring/stdint.h> work for GCC >= 4.5
	when GCC is not the system's default compiler.
	* lib/Makefile.am (unistring/stdint.h): When the compiler is
	GCC >= 4.5, include its <stdint.h> file.
	Reported by Marcin Cieślak and analyzed by Krzysztof Malinowski
	at <https://savannah.gnu.org/bugs/?45783>.

2016-12-02  Daiki Ueno  <ueno@gnu.org>

	* version.sh: Bump version number and date.
	* README: Update version.
	* NEWS: Mention 0.9.7 changes.

2016-12-02  Bruno Haible  <bruno@clisp.org>

	Change license to LGPLv3+ or GPLv2.
	* README (Copyright): Rewrite section.
	* doc/libunistring.texi (Licenses): Change accordingly.
	* autogen.sh: Pass option --lgpl=3orGPLv2 to gnulib-tool.
	Reported by Nikos Mavrogiannopoulos.
	* gnulib-m4/gnulib-cache.m4: Regenerated.

2016-12-02  Bruno Haible  <bruno@clisp.org>

	Allow use of automake-1.15.
	* autogen.sh: Update comments. Make sure to get new versions of files
	brought in by automake.

2016-11-23  Bruno Haible  <bruno@clisp.org>

	Update installation instructions for Windows.
	* README.windows: Assume a 64-bit Windows. Explain both 32-bit and
	64-bit builds. Add instructions for the MS Visual C/C++ tool chain.
	Revamp instructions for Cygwin.

2016-11-23  Bruno Haible  <bruno@clisp.org>

	Drop the nickname "woe32".
	* README.windows: Renamed from README.woe32.
	* doc/libunistring.texi (Installation): Update.
	* Makefile.am (EXTRA_DIST): Update.

2015-06-25  Daiki Ueno  <ueno@gnu.org>

	* version.sh: Bump version number and date.
	* README: Update version.
	* NEWS: Mention 0.9.6 changes.

2015-02-16  Daiki Ueno  <ueno@gnu.org>

	* Version 0.9.5 released.
