@@ -1,3 +1,13 @@
+2017-06-20  Bruno Haible  <bruno@clisp.org>
+
+	Avoid collision between the generated <unistring/stdbool.h> and the
+	platform's original <stdbool.h>.
+	Reported by Dennis Clarke <dclarke@blastwave.org> in
+	<https://lists.gnu.org/archive/html/bug-gettext/2017-06/msg00022.html>.
+	* lib/stdbool.mini.h: Update from stdbool.in.h from current gnulib. Use
+	compiler dependent conditionals to determine whether <stdbool.h> should
+	be included.
+
 2017-01-10  Bruno Haible  <bruno@clisp.org>
 
 	Modernize URLs.
